--- a/index.html
+++ b/index.html
@@ -24,6 +24,32 @@
           <p class="year">1884-1886</p>
         </div>
         <button class="newPainting"><span>🎨</span> New Painting</button>
+        <div class="dimensions">
+          <label id="painting-height" for="height">Height</label>
+          <input
+            type="range"
+            name="height"
+            id="height"
+            min="1"
+            max="100"
+            step="1"
+            value="20"
+            onchange="updateGrid(this.value)"
+            oninput="updateLabel(this.value)"
+          />
+          <label id="painting-width" for="width">Width</label>
+          <input
+            type="range"
+            name="width"
+            id="width"
+            min="1"
+            max="100"
+            step="1"
+            value="20"
+            onchange="updateGrid(this.value)"
+            oninput="updateLabel(this.value)"
+          />
+        </div>
       </div>
     </div>
   </body>
