Create getHeight and setHeight functions, which change the height of the painting

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="container">
       <div class="painting"></div>
-      <div class="info hidden">
+      <div class="info">
         <div class="answer">
           <p class="title">
             A Sunday Afternoon on the Island of La Grande Jatte
@@ -36,7 +36,7 @@
               max="100"
               step="1"
               value="20"
-              onchange="updateGrid(this.value)"
+              onchange="getHeight(this.value)"
             />
           </div>
           <div class="slider">
