Add setWidth and getWidth functions

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               max="100"
               step="1"
               value="20"
-              onchange="updateGrid(this.value)"
+              onchange="getWidth(this.value)"
             />
           </div>
         </div>
