Add start button that hides the main content and then disappears when clicked

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <body>
     <header class="header">
       <h1>Can you guess the painting?</h1>
-      <h4>Click to reveal!</h4>
+      <button id="start">Start Playing!</button>
+      <h4 class="subheading hidden">Click to reveal!</h4>
     </header>
-    <div class="container">
+    <div id="container" class="hidden">
       <div class="painting"></div>
       <div class="info">
         <div class="answer">
