Add setNewPainting to start button, so there is no default painting

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
       <div class="info">
         <div class="answer">
           <p class="title">
-            A Sunday Afternoon on the Island of La Grande Jatte
           </p>
-          <p class="artist">Georges Seurat</p>
-          <p class="year">1884-1886</p>
+          <p class="artist"></p>
+          <p class="year"></p>
         </div>
         <button id="new-painting"><span>🎨</span> New Painting</button>
         <div class="dimensions">
